force-app/main/default/objects/Opportunity/fields/Parent_Record__c.field-meta.xml
<CustomField>
    <fullName>Parent_Record__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Parent_Record_Id__c, Parent_Record_Name__c, &quot;_self&quot;)</formula>
    <label>Origin Record</label>
    <type>Text</type>
</CustomField>