force-app/main/default/objects/Opportunity/fields/Parent_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Parent_Record_Type__c</fullName>
    <label>Origin Record Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>